--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.3",
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
