--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "~1.23.1",
     "@react-navigation/native": "^7.1.8",
     "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
-    "expo-firebase-recaptcha": "^2.3.1",
     "expo-font": "~14.0.10",
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.21",
@@ -24,7 +23,6 @@
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
-    "firebase": "^12.7.0",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -34,7 +32,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
